src/styles/antd-override-styles.css
/* 
  .ant-row-rtl #components-layout-demo-top .logo {
    float: right;
    margin: 16px 0 16px 24px;
  } */

  
.ant-popover-arrow {
    display: none;
}

.ant-collapse-content-box {
    padding: 4px !important; 
}


.ant-form-item {
    margin-bottom: 10px;
}

.ant-upload {
    width: 100%;
}

.ant-popover-placement-top {
    left: 0;
}


.ant-timeline-item-head-custom {
    padding: 0;
}

.selector > .ant-select-selector {
  background-color: #001529 !important;
}

.selector > .ant-select-selector.selector::after {
  color: white;
}

.ant-picker-input > input  {
    color: white;
}

.date-picker-black > .ant-picker-input > input  {
    color: black;
}

.ant-radio-inner {
  width: 40px;
  height: 40px;
}

.ant-radio-inner::after {
  width: 20px;
  height: 20px;
}

.ant-switch {
  background-color: grey;
}

.ant-switch-checked {
    background-color: #1890ff;
}

.ant-checkbox-wrapper {
    align-items: center;
}

.ant-checkbox {
  top: 0
}

.ant-modal {
  padding-bottom: 100px;
  
}

.ant-modal-mask {
  min-height: 1000px;
}

.ant-modal-header {
    background-color: #001529;
    color: white;
    border: none;
}
.ant-modal-content {
  margin-bottom: 100px;
}

.ant-steps-navigation {
    min-height: 60px;
}

.ant-steps-item-finish > .ant-steps-item-container > .ant-steps-item-content > .ant-steps-item-title {
    color: white;
}

.ant-steps-item-wait > .ant-steps-item-container > .ant-steps-item-content > .ant-steps-item-title {
    color: white;
}

.ant-steps-navigation .ant-steps-item-container {
    padding-bottom: 0;
}

.ant-steps-navigation .ant-steps-item::after {
    border-color: white;
}

.ant-steps-item-wait .ant-steps-item-icon > .ant-steps-icon {
    color: white;
}

.ant-steps-item-process > .ant-steps-item-container > .ant-steps-item-content > .ant-steps-item-title {
    color: white;
}


.ant-steps-item-finish .ant-steps-item-icon, .ant-steps-item-wait .ant-steps-item-icon {
    background-color:  #001529;
    color: white;
    border-color: white;
}

.ant-modal-footer {
    background-color: #001529;
    border: none;
}

.ant-collapse-content {
    background-color: #001529;
}

.ant-collapse-expand-icon {
    color: white;
}

.ant-collapse-header:hover {
    background-color: #192c3e;
}

.dark .ant-pagination-item {
    background-color: #001529;
    color: white;
}

.dark .ant-pagination-item a {
    color: white;
}

.dark .ant-pagination-prev {
    background-color: #001529;
    color: white;
}
.dark .ant-pagination-prev .ant-pagination-item-link, .dark  .ant-pagination-next .ant-pagination-item-link {
    background-color: #001529;
    color: white;
}

.dark .ant-pagination-jump-prev .ant-pagination-item-container .ant-pagination-item-ellipsis, .dark .ant-pagination-jump-next .ant-pagination-item-container .ant-pagination-item-ellipsis
{
    background-color: #001529;
    color: white;
}

.rc-md-editor .rc-md-navigation {
    background-color: #001529 !important;
}

.rc-md-editor .rc-md-navigation .button-wrap .button {
    background-color: #001529 !important;
    color: white !important;
}

.rc-md-editor .drop-wrap {
    background-color: #001529 !important;
}

.rc-md-editor .editor-container .sec-md .input {
    background-color: #001529 !important;
    color: white !important;
}

.rc-md-editor .editor-container .sec-html {
  background-color: #001529 !important;
  color: white !important;
}


.custom-html-style h1, 
.custom-html-style h2,
.custom-html-style h3,
.custom-html-style h4,
.custom-html-style h5,
.custom-html-style h6,
.custom-html-style p,
.custom-html-style blockquote
.custom-html-style code {
    color: white !important;
}
.custom-html-style code, 
.custom-html-style pre,
.custom-html-style table th,
.custom-html-style blockquote {
  background: #192c3e  !important;
}

.custom-html-style {
    color: white !important;
}

.ant-collapse-expand-icon {
    align-self: center;
}

.ant-tooltip-disabled-compatible-wrapper {
    display: flex !important;
}
/* 
#w3m-modal { 
    z-index: 2000 !important; 
} */

.infinite-scroll-component__outerdiv {
    width: 100%
}

.blockin-chain-select-logo-right {
    padding-right: 0px !important;
    margin-right: 4px !important;
}

.ant-modal-mask {
    z-index: 80;
}

.ant-modal-wrap {
    z-index: 80;
}

.ant-popover-placement-bottom, .ant-popover-placement-bottomLeft, .ant-popover-placement-bottomRight {
    width: 100%;
}

.blockin-popup-container {
    max-width: 80vw !important;
    margin: 0 !important;
    max-height: 80vh !important;
}

.blockin-popup {
    max-height: 75vh !important;
}


.blockin-root {
    display: flex !important;
    justify-content: center !important;
    height: 100vh !important;
    width: 100vw !important;
    align-items: center !important;
    padding: 0 !important;
    /* max-height: 80vh !important; */
    /* max-width: fit-content !important; */
    min-width: 0 !important;
    min-height: 0 !important;
}

/* .ant-table {
  background-color: black;
  color: white;
}

.ant-table:hover {
  background-color: #192c3e;
}

.ant-table-thead > tr > th {
  background-color: black;
  color: white;
}

.ant-table-cell-row-hover {
  background-color: black !important;
} */

.ant-dropdown-menu-item:hover, .ant-dropdown-menu-submenu-title:hover, .ant-dropdown-menu-item.ant-dropdown-menu-item-active, .ant-dropdown-menu-item.ant-dropdown-menu-submenu-title-active, .ant-dropdown-menu-submenu-title.ant-dropdown-menu-item-active, .ant-dropdown-menu-submenu-title.ant-dropdown-menu-submenu-title-active
{
    background-color: initial;
}

.ant-popover-inner {
  background-color: #001529;
  border: 1px solid gray;
}

